finish Assignment
