# swagger_output.json
@@ -248,6 +248,44 @@
             }
           }
         }
+      },
+      "post": {
+        "tags": [
+          "Assignment"
+        ],
+        "description": "to get Interests page",
+        "parameters": [
+          {
+            "name": "assignmentId",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "page opened"
+          },
+          "400": {
+            "description": "User not found",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "code": {
+                  "type": "string",
+                  "example": "403"
+                },
+                "message": {
+                  "type": "string",
+                  "example": "You cannot access this page before login"
+                }
+              },
+              "xml": {
+                "name": "main"
+              }
+            }
+          }
+        }
       }
     },
     "/signin/forgetpassword": {
@@ -891,42 +929,6 @@
                 "name": "main"
               }
             }
-          },
-          "400": {
-            "description": "User not found",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "code": {
-                  "type": "string",
-                  "example": "403"
-                },
-                "message": {
-                  "type": "string",
-                  "example": "You cannot access this page before login"
-                }
-              },
-              "xml": {
-                "name": "main"
-              }
-            }
-          },
-          "403": {
-            "description": "Forbidden"
-          }
-        }
-      }
-    },
-    "/assignment/": {
-      "get": {
-        "tags": [
-          "Interests"
-        ],
-        "description": "to get Interests page",
-        "parameters": [],
-        "responses": {
-          "200": {
-            "description": "page opened"
           },
           "400": {
             "description": "User not found",
